--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,16 @@ services:
       - "8082:80"
     depends_on:
       - mqtt_broker
+  portainer:
+    image: portainer/portainer-ce:alpine
+    container_name: mqtt_portainer
+    command: -H unix:///var/run/docker.sock
+    ports:
+      - "8083:9000"                  # ← port changé en 8083 comme demandé
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+    restart: always
+
+volumes:
+  portainer_data:
